force-app/main/default/objects/Lead/fields/Cart_Status__c.field-meta.xml
<CustomField>
    <fullName>Cart_Status__c</fullName>
    <label>Cart Status</label>
    <type>Picklist</type>
    <description>Latest cart status for this lead.</description>
    <valueSet>
        <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
                <value>
                    <fullName>Recovered</fullName>
                </value>
                <value>
                    <fullName>Converted</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>