force-app/main/default/objects/Lead/fields/Chat_Interest__c.field-meta.xml
<CustomField>
    <fullName>Chat_Interest__c</fullName>
    <label>Chat Interest</label>
    <type>Text</type>
    <length>255</length>
    <description>Product or category of interest the visitor expressed in the website chat.</description>
</CustomField>