force-app/main/default/objects/Lead/fields/Chat_Summary__c.field-meta.xml
<CustomField>
    <fullName>Chat_Summary__c</fullName>
    <label>Chat Summary</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>What the visitor discussed in the website chat, captured by the Concierge for Inside Sales nurture.</description>
</CustomField>