force-app/main/default/objects/Lead/fields/Closed_Date__c.field-meta.xml
<CustomField><fullName>Closed_Date__c</fullName><label>Closed Date</label><type>DateTime</type><trackHistory>true</trackHistory></CustomField>