force-app/main/default/objects/Lead/fields/Converted_Account__c.field-meta.xml
<CustomField><fullName>Converted_Account__c</fullName><label>Converted Account</label><type>Lookup</type><referenceTo>Account</referenceTo><relationshipLabel>Closed Leads</relationshipLabel><relationshipName>Closed_Leads</relationshipName><deleteConstraint>SetNull</deleteConstraint><trackHistory>true</trackHistory></CustomField>