force-app/main/default/objects/Lead/fields/Converted_Order__c.field-meta.xml
<CustomField><fullName>Converted_Order__c</fullName><label>Converted Order</label><type>Lookup</type><referenceTo>Order</referenceTo><relationshipLabel>Closed Leads</relationshipLabel><relationshipName>Closed_Leads</relationshipName><deleteConstraint>SetNull</deleteConstraint><trackHistory>true</trackHistory></CustomField>