force-app/main/default/objects/Lead/fields/Email_Consent__c.field-meta.xml
<CustomField>
    <fullName>Email_Consent__c</fullName><label>Email Consent</label><type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Lead has consented to receive marketing/offer emails. Agent must check before emailing.</description>
</CustomField>