force-app/main/default/objects/Lead/fields/Last_Cart_Value__c.field-meta.xml
<CustomField>
    <fullName>Last_Cart_Value__c</fullName>
    <label>Last Cart Value</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>Value of the most recent cart.</description>
</CustomField>