force-app/main/default/objects/Lead/fields/Last_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Purchase_Date__c</fullName>
    <label>Last Purchase Date</label>
    <type>Date</type>
    <description></description>
</CustomField>