force-app/main/default/objects/Lead/fields/Lifetime_Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Order_Value__c</fullName>
    <label>Lifetime Order Value</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description></description>
</CustomField>