force-app/main/default/objects/Lead/fields/Next_Best_Action__c.field-meta.xml
<CustomField>
    <fullName>Next_Best_Action__c</fullName>
    <description>Lead Copilot's latest recommended next-best-action(s), derived from unified-profile metrics (LTV, purchases, recency, cart).</description>
    <label>Next Best Action</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>