force-app/main/default/objects/Lead/fields/Nurture_Last_Run__c.field-meta.xml
<CustomField>
    <fullName>Nurture_Last_Run__c</fullName>
    <description>Last date the autonomous Lead Copilot nurture step ran for this lead (prevents repeat sends).</description>
    <label>Nurture Last Run</label>
    <type>Date</type>
</CustomField>