force-app/main/default/objects/Lead/fields/Nurture_Since__c.field-meta.xml
<CustomField>
    <fullName>Nurture_Since__c</fullName>
    <description>Date the lead entered Nurture status. Anchors the 30-day autonomous Lead Copilot sweep.</description>
    <label>Nurture Since</label>
    <type>Date</type>
</CustomField>