force-app/main/default/objects/Lead/fields/Person_Account__c.field-meta.xml
<CustomField>
    <fullName>Person_Account__c</fullName>
    <label>Person Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Abandoned-Cart Leads</relationshipLabel>
    <relationshipName>Abandoned_Cart_Leads</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For a KNOWN returning customer whose cart was abandoned, links the recovery Lead back to their existing Person Account.</description>
</CustomField>