force-app/main/default/objects/Lead/fields/Preferences__c.field-meta.xml
<CustomField><fullName>Preferences__c</fullName><label>Preferences</label><type>LongTextArea</type><length>32768</length><visibleLines>4</visibleLines><description>JSON of discovery prefs (roast, brew, flavor, self/gift, budget, qty, gender).</description></CustomField>