force-app/main/default/objects/Lead/fields/Purchase_Closed__c.field-meta.xml
<CustomField><fullName>Purchase_Closed__c</fullName><label>Purchase Closed</label><type>Checkbox</type><defaultValue>false</defaultValue><trackHistory>true</trackHistory><description>Lead closed because the person purchased (custom close).</description></CustomField>