force-app/main/default/objects/Lead/fields/Woo_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Woo_Customer_Id__c</fullName>
    <label>Woo Customer Id</label>
    <type>Text</type>
    <length>50</length>
    <externalId>true</externalId>
    <description>WooCommerce customer/visitor ID.</description>
</CustomField>